# Humanoid-Robotics-Book

./: README.md  docusaurus.config.js  package-lock.json  package.json  sidebar.js
backend/: .dockerignore  DOCKER_README.md  Dockerfile  README.md  alembic.ini  debug_app.py  docker-compose.yml  pyproject.toml  requirements.txt  run_server.py  simple_test.py  test_basic.py  test_import.py
backend/.specify/memory/: constitution.md  qwen-context.md
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_setup.py
backend/specs/002-rag-chatbot-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
backend/specs/003-rag-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
backend/src/api/: chat_endpoints.py  ingestion_endpoints.py  main.py
backend/src/core/: agent_orchestrator.py
backend/src/db/: session.py
backend/src/models/: __init__.py  base.py  book_content.py  chat_history.py  query_context.py  query_log.py  text_chunk.py
backend/src/services/: agent_service.py  generation_service.py  global_qa_service.py  ingestion_service.py  orchestration_service.py  rag_service.py  retrieval_service.py  selected_text_qa_service.py
backend/src/utils/: chunking.py  config.py  database.py  embedding_utils.py  file_processing.py  logging.py  vector_db.py
backend/tests/contract/: test_chat_endpoint.py  test_clear_endpoint.py  test_history_endpoint.py  test_ingestion_endpoint.py  test_selected_text_endpoint.py
backend/tests/integration/: test_full_book_query.py  test_history_management.py  (+2 more)
docs/: intro.md  (+2 more)
(+100 files in other folders)
