[project]
name = "rag-chatbot"
version = "0.1.0"
description = "RAG Chatbot for AI-Spec-Driven Book"
authors = [{name = "Developer", email = "developer@example.com"}]
requires-python = ">=3.9"

dependencies = [
   "asyncpg>=0.31.0",
   "beautifulsoup4>=4.14.3",
   "cohere>=5.20.1",
   "fastapi>=0.125.0",
   "httpx>=0.28.1",
   "litellm>=1.80.10",
   "markdown>=3.9",
   "psycopg2-binary>=2.9.11",
   "pydantic>=2.12.5",
   "pydantic-settings>=2.11.0",
   "pytest>=8.4.2",
   "python-dotenv>=1.2.1",
   "qdrant-client>=1.16.1",
   "sqlalchemy>=2.0.45",
   "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
